[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "abins-lib"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
             "euphonic",
             "resins",
             ]

[project.urls]
Repository = "https://github.com/pace-neutrons/abins-lib"

[tool.setuptools.packages.find]
where =  ["src"]

